# sl-package

./: MANIFEST.in  README.md  pyproject.toml  setup.py  test_game_theory.py
src/sl_package/: __init__.py  game.py  game_node.py  sampling.py
src/sl_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sl_package/solvers/: __init__.py  backward_induction.py  mixed_strategy.py  pure_strategy.py  solver.py
